# play-sound-mcp-server

./: .gitignore  IMPLEMENTATION_SUMMARY.md  LICENSE  PROJECT_SUMMARY.md  README.md  README_Augment.md  RENAME_SUMMARY.md  VSCODE_FIX_SUMMARY.md  pyproject.toml  simple_test.py  test_audio.py  test_audio_playback.py  test_backends.py  test_mcp_client.py  upload_instructions.py
docs/: CLIENT_CONFIGURATION.md  CONFIGURATION_EXAMPLES.md  architecture.md  configuration-schema.md  implementation-comparison-summary.md  implementation-plan.md  nodejs-alternatives-analysis.md  research-findings.md  system-audio-tools-analysis.md
docs/nodejs/: typescript-mcp-implementation.md
scripts/: generate_default_sound.py  setup_claude_config.py
src/mcp_server_play_sound/: __init__.py  __main__.py  audio_player.py  config.py  server.py
src/notification_sound_windows/: __init__.py  audio_player.py  config.py
tests/: __init__.py  test_audio_devices.py  test_audio_player.py  test_config.py  test_device_restoration.py  test_vscode_fix.py
